@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Client {
        + currentPort : int
        + host : String
        + in : DataInputStream
        + out : DataOutputStream
        + running : boolean
        + socket : Socket
        + outgoingFiles : Queue<File>
        + receivingFile : boolean
        + sendingFile : boolean
        + Client(String, int, Controller) : Client
        + endConnection() : void
        + launchReceivingLoop() : void
        + launchSendingLoop() : void
        + receiveFile() : void
        + sendFile(File) : void
        + startClient() : void
        - addCompletedRecordToIncoming(String) : void
    }
  }
  

  namespace sample {
    class sample.Controller {
        + btnJoinServer : Button
        + btnLeaveServer : Button
        + filesIncoming : ObservableList<FileTransfer>
        + filesOutgoing : ObservableList<FileTransfer>
        + lblStatus : Label
        + tblIncoming : TableView
        + tblOutgoing : TableView
        + txtIp1 : TextField
        + txtIp2 : TextField
        + txtIp3 : TextField
        + txtIp4 : TextField
        + txtPortNumber : TextField
        + exitApplication() : void
        + getLocalFile() : File
        + getLocalFiles() : List<File>
        + initialize() : void
        + joinServer() : void
        + leaveServer() : void
        + sendFile(File) : void
        + sendMultipleFiles() : void
        + sendSingleFile() : void
        - getIpAddress() : String
        - initIncomingTable() : void
        - initOutgoingTable() : void
    }
  }
  

  namespace sample {
    class sample.FileTransfer {
        + file : File
        + fileName : String
        + progress : double
        + status : String
        + FileTransfer(File) : FileTransfer
        + getFile() : File
        + getFileName() : String
        + getProgress() : String
        + getStatus() : double
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} + main(String[]) : void
        + start(Stage) : void
    }
  }
  

  sample.Client o-- sample.Controller : controller
  sample.Controller o-- sample.Client : client
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
